KD-613, (squashable) fixes element adding

--- a/koha-tmpl/intranet-tmpl/prog/css/Labels/labels.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/Labels/labels.css
@@ -171,6 +171,11 @@
     padding: 3px 10px;
 }
 
+#elementControls .button:hover {
+    background-color:#aff;
+    cursor:default;
+}
+
 .dsfd-doc {
     cursor:default;
     margin: 6px 0;
